Fix slide menu close when slide menu removed
Slide menu should close on medium screen and up.  No scrollbars for horizantal should display -fixed.

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -50,7 +50,7 @@ body, html {
 body .off-canvas-wrapper {
 	height: 100%;
 	width: 100%;
-	overflow: visible;
+	overflow-y: visible;
 
 	.off-canvas-content {
 		height: 100%;
